added degre sign

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <div class="temperature">
       <div class="degree_section">
         <h2 class="temperature_degree">34</h2>
-        <span>F</span>
+        <span>&deg;</span>
+        <span class="temperature_form">F</span>
       </div>
       <div id="current_time">1</div>
       <div class="temperature_description">its very cold</div>
